force-app/main/default/objects/Field_Type_Mapping__mdt/Field_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Field Type Mapping</label>
    <pluralLabel>State Mappings</pluralLabel>
</CustomObject>