force-app/main/default/objects/Field_Type_Mapping__mdt/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <description>The three digit country code.</description>
    <inlineHelpText>The three digit country code.</inlineHelpText>
    <label>CountryCode</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>