force-app/main/default/objects/Field_Type_Mapping__mdt/fields/Mapped_Value__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Value__c</fullName>
    <label>Mapped Value</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>