force-app/main/default/objects/Field_Type_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CountryCode__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Label__c</columns>
    <columns>Mapped_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>